Fix proteome statistics for multiple proteome components